--- a/styles.css
+++ b/styles.css
@@ -130,13 +130,14 @@ button:focus {
   outline: 1.5px solid #4a5dcd;
 }
 
-footer {
+.footer {
   background-color: #1f2151;
   padding: 2.5rem;
   max-height: 196px;
 
   text-align: center;
   display: none;
+  flex-direction: column;
 
   overflow-y: scroll;
 }
@@ -145,7 +146,7 @@ footer {
   display: block;
 }
 
-footer span {
+.footer span {
   color: #7d8dec;
   font-size: 1rem;
   font-family: "IBM Plex Mono", monospace;
@@ -153,10 +154,14 @@ footer span {
   line-height: 1.25rem;
 }
 
-footer h1 {
+.footer h1 {
   color: #f1f2f6;
   font-weight: 700;
   font-size: 2rem;
   line-height: 3rem;
   word-break: break-all;
+}
+
+.showFooter {
+  display: flex;
 }
